--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ flutter:
 
   uses-material-design: true
 
-  # assets:
-  #  - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
 
   fonts:
     - family: Cocogoose
