--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
 
   cupertino_icons: ^0.1.2
   flutter_colorpicker: ^0.3.4
+  provider: ^4.0.5+1
 
 dev_dependencies:
   flutter_test:
