--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_colorpicker: ^0.3.4
   provider: ^4.0.5+1
+  image_picker: ^0.6.6+4
 
 dev_dependencies:
   flutter_test:
